# incan

./: AGENTS.md  CNAME  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  deny.toml  versions.json
.agents/: README.md  learnings.md  test-suite.md
.config/: nextest.toml
.cursor/agents/: README.md  (+1 more)
assets/: logo.txt
benchmarks/: README.md  run_all.sh
crates/: README.md
crates/incan_web_macros/: Cargo.toml  README.md
crates/incan_web_macros/src/: lib.rs
crates/incan_web_macros/tests/: route_runtime.rs
dev/: 404.html  index.html
examples/: README.md
incan-language-v0.1/: index.html
incan-v0.1/: index.html
scripts/: README.md  check_changed_rustdocs.py  check_docs_examples.sh  check_release_surface.py  generated_rust_audit.py  install-incan-sdk.sh  run_examples.sh
src/: README.md  builtin_stdlib.rs  compiled_sdk.rs  dependency_resolver.rs  generated_cache.rs  lib.rs  library_manifest.rs  lockfile.rs  main.rs  manifest.rs  toolchain_layout.rs  version.rs  workspace.rs
tests/: README.md  cli_integration.rs  codegen_snapshot_tests.rs  generated_cache_integration.rs  generated_rust_artifact_tests.rs  generated_rust_audit_tests.rs  generated_rust_callability_artifact_tests.rs  generated_rust_native_consumer_tests.rs  integration_tests.rs  layering_guard.rs  property_tests.rs  sdk_installer_tests.rs  semantic_core_parity_strings.rs  std_encoding_algorithm_modules.rs  stdlib_generated_rust_snapshot_tests.rs  toolchain_installer_tests.rs  vocab_guardrails.rs
v0.1/: 404.html  index.html
v0.2/: 404.html  index.html
v0.3/: index.html
v0.4/: 404.html
(+2270 files in other folders)
